--- a/app/CSSModules/backgroundMediaQuery.css
+++ b/app/CSSModules/backgroundMediaQuery.css
@@ -1,4 +1,5 @@
 
+/************************ Homepage ************************/
 /* 
 
   media query for background responsiveness 
@@ -64,4 +65,67 @@
     }
   }
 
-  
+/************************ Homepage ************************/
+
+
+
+
+/************************ Destination, Crew ************************/
+/*
+
+    at max-width of 767px and max-height of 850px
+    preventing background cut on smaller screen heights
+
+*/
+
+/* Destination page background fix for mobile view */
+@media (max-width: 47.9375rem) and (max-height: 53.125rem){
+    .destination{
+        width: 100% !important;
+        height: 53.125rem !important;
+    }
+}
+
+
+
+/*
+
+    at max-width of 767px and max-height of 710px
+    preventing background cut on smaller screen heights
+
+*/
+
+/* Crew page backgroundfix for mobile view */
+@media (max-width: 47.9375rem) and (max-height: 44.375rem){
+    .crew {
+        width: 100% !important;
+        height: 44.375rem !important;
+    }
+}
+
+
+
+
+/* fix for tablet view */
+/* max-width of 1439px and max-height of 1024px */
+@media ((min-width: 48rem) and (max-width: 89.9375rem)) and (max-height: 64rem){
+    .destination, .crew {
+        width: 100% !important;
+        height: 64rem !important;
+        
+    }
+    
+}
+
+/* fix for desktop view */
+/* min-width of 1440px and max-height of 900px */
+@media (min-width: 90rem) and (max-height: 56.25rem){
+    .destination, .crew {
+        width: 100% !important;
+        height: 56.25rem !important;
+       
+    }
+}
+
+
+/************************ Destination, Crew ************************/
